--- a/src/app/pages/companies/companies.page.html
+++ b/src/app/pages/companies/companies.page.html
@@ -1,6 +1,6 @@
 
 <div class="common-content">
-    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)"></vgdb-common-list-header>
+    <vgdb-common-list-header [dataType]="'company'" (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)" (toNavigate)="navigateTo($event)"></vgdb-common-list-header>
     <div *ngIf="companies.length">
         <vgdb-items-list [itemsList]="companies"
                          [itemsTotal]="itemsTotal"
