--- a/src/app/pages/awards/awards.page.html
+++ b/src/app/pages/awards/awards.page.html
@@ -1,5 +1,5 @@
 <div class="common-content">
-    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)"></vgdb-common-list-header>
+    <vgdb-common-list-header [dataType]="'award'" (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)" (toNavigate)="navigateTo($event)"></vgdb-common-list-header>
     <div *ngIf="!!awards.length">
         <vgdb-items-list [itemsList]="awards"
                         [itemsTotal]="itemsTotal"
