--- a/src/app/pages/genres/genres.page.html
+++ b/src/app/pages/genres/genres.page.html
@@ -1,5 +1,5 @@
 <div class="common-content">
-    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)"></vgdb-common-list-header>
+    <vgdb-common-list-header [dataType]="'genre'" (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)" (toNavigate)="navigateTo($event)"></vgdb-common-list-header>
     <div *ngIf="!!genres.length">
         <vgdb-items-list [itemsList]="genres"
                         [itemsTotal]="itemsTotal"
