--- a/src/app/pages/platforms/platforms.page.html
+++ b/src/app/pages/platforms/platforms.page.html
@@ -1,5 +1,5 @@
 <div class="common-content">
-    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)"></vgdb-common-list-header>
+    <vgdb-common-list-header [dataType]="'platform'" (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)" (toNavigate)="navigateTo($event)"></vgdb-common-list-header>
     <div *ngIf="!!platforms.length">
         <vgdb-items-list [itemsList]="platforms"
                         [itemsTotal]="itemsTotal"
