--- a/src/app/pages/themes/themes.page.html
+++ b/src/app/pages/themes/themes.page.html
@@ -1,5 +1,5 @@
 <div class="common-content">
-    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)"></vgdb-common-list-header>
+    <vgdb-common-list-header [dataType]="'theme'" (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event, 0)" (toNavigate)="navigateTo($event)"></vgdb-common-list-header>
     <div *ngIf="!!themes.length">
         <vgdb-items-list [itemsList]="themes"                         
                          [itemsTotal]="itemsTotal"
