--- a/src/app/pages/franchises/franchise-detail/franchise-detail.page.html
+++ b/src/app/pages/franchises/franchise-detail/franchise-detail.page.html
@@ -78,7 +78,7 @@
                                     navigateTo="franchises" imgPath="franchises">
                 </vgdb-items-list>
         </mat-expansion-panel>
-        <mat-expansion-panel *ngIf="charactersMain && charactersMain.length">
+        <mat-expansion-panel *ngIf="franchise.characters && franchise.characters.length">
             <mat-expansion-panel-header class="divider"[style]="backgroundStyle">
               <mat-panel-title>
                 Personajes
