--- a/src/app/components/common-list-header/common-list-header.component.html
+++ b/src/app/components/common-list-header/common-list-header.component.html
@@ -21,6 +21,9 @@
          <mat-icon>search</mat-icon>
       </button>
    </div>
+   <button mat-icon-button aria-label="Filtrat" (click)="dispatchFilters()">
+      <mat-icon>filter_alt</mat-icon>
+   </button>
 </div>
 
 
