resize platform img

--- a/src/app/pages/platforms/platform-detail/platform-detail.page.scss
+++ b/src/app/pages/platforms/platform-detail/platform-detail.page.scss
@@ -9,7 +9,11 @@
    .platform-img {
        margin-right: 50px;
        img {
-           width: 200px;
+        max-width: 350px;
+        max-height: 350px;
+        margin: auto;
+        display: block;
+        object-fit: cover;
        }
    }
 }
