--- a/src/app/pages/games/game-detail/game-detail.page.scss
+++ b/src/app/pages/games/game-detail/game-detail.page.scss
@@ -36,8 +36,11 @@
 
             }
             
-            &.NES, &.Master, &.Disk, &.Boy {
+            &.NES, &.Master, &.Disk, &.Boy, &.Satellaview {
                 background-color: white;
+                &.Virtual {
+                    background-color: black;
+                }
             }
         }
     }
