--- a/src/app/pages/franchises/franchise-form/franchise-form.component.html
+++ b/src/app/pages/franchises/franchise-form/franchise-form.component.html
@@ -17,6 +17,10 @@
             <input id="first_game_date" type="date" formControlName="first_game_date" matInput>
         </mat-form-field>
         <mat-form-field>
+            <mat-label>Notas</mat-label>
+            <textarea id="notes" formControlName="notes" matInput></textarea>
+        </mat-form-field>
+        <mat-form-field>
             <mat-label>Wikipedia</mat-label>
             <input id="wikipedia" type="text" formControlName="wikipedia" matInput>
         </mat-form-field>
