--- a/src/app/pages/games/game-detail/game-detail.page.scss
+++ b/src/app/pages/games/game-detail/game-detail.page.scss
@@ -36,7 +36,7 @@
 
             }
             
-            &.NES, &.Master, &.Disk, &.Boy, &.Satellaview {
+            &.NES, &.Master, &.Disk, &.Boy, &.Satellaview, &.Dreamcast {
                 background-color: white;
                 &.Virtual {
                     background-color: black;
