--- a/src/app/pages/companies/company-detail/company-detail.page.html
+++ b/src/app/pages/companies/company-detail/company-detail.page.html
@@ -37,7 +37,9 @@
                 </div>
                 <div class="info-entry" *ngIf="company.people && company.people.length">
                     <div class="label-info">Personas clave:</div>
-                    <div class="value-info" *ngFor="let person of company.people"><img class="img-line" [src]="'http://localhost:3000/images/people/'+person.main_img"/><a [routerLink]="['/people', person.id]">{{person.name}}</a></div>
+                    <div class="people-wrapper">
+                        <div class="value-info" *ngFor="let person of company.people"><img class="img-line" [src]="'http://localhost:3000/images/people/'+person.main_img"/><a [routerLink]="['/people', person.id]">{{person.name}}</a></div>
+                    </div>
                 </div>
                 <div class="info-entry" *ngIf="company.defunct_year">
                     <div class="label-info">Fecha disolución:</div>
